# programmable_G600

./: LICENSE  meson.build
include/: device.hpp  instructions.hpp  profile.hpp
include/serial/: deserialize.hpp  serial_zzz.hpp
source/: device.cpp  main.cpp  profile.cpp
source/serial/: deserialize.cpp  serial_zzz.cpp
test_files/: config.zzz  exampleProfile.zzz  test_instruction_system.cpp  test_instruction_system.zzz
